--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "firebase": "^9.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
