--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.22.0",
     "firebase": "^9.1.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
